# E-Commerce

./: .env-example  .gitignore  ecommerce.db  pyproject.toml  readme.md  runtime.txt
alembic/: env.py
alembic/versions/: 13ae45adb1f6_refactor_the_signup_for_vendors_.py  1597cf8964c7_updated_token_schema.py  33e149063314_models_for_users.py  42245a9b8daf_edited_businesstype_and_user_table.py  548b2ddbe4ff_deleted_businesscreate.py  6084300c0c79_added_created_at.py  8791c5294e05_added_otp.py  8b73c7a45164_cleaned_up_user_model.py  92455f7b5c46_edited_user_table.py  9e30a0917957_edited_user_base_model.py  d04419ad57bf_edited_customercreate.py  d177be06bf51_edited_the_vendorcreate.py  d6c16103ee8f_edited_the_models.py  d70cb40fd105_updated_models.py  de75e3d78283_added_created_at.py  e0aec6c8fcc8_edited_the_vendor_create.py  f12e7f430e42_edited_models.py  f40b47b1651d_update_the_models.py
app/: main.py  utils.py
app/actions/: __init__.py  user.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py
app/core/: config.py  email_config.py  security.py
app/db/: init_db.py
app/models/: __init__.py  base.py  user.py
app/schemas/: __init__.py  mail.py  password.py  token.py
